--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Assignment #7 - Autumn B</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.10.0/p5.min.js"></script>
     <script src="sketch.js"></script>
+    <script src="p5.sound.js"></script>
   </head>
   <body>
   </body>
